--- a/src/components/viuws/login/login.style.css
+++ b/src/components/viuws/login/login.style.css
@@ -24,6 +24,7 @@
 .login-container h1 {
     width: 70%;
     font-size: 1.6rem;
+    text-align: center;
 }
 
 .form-login {
@@ -45,7 +46,8 @@
     width: 100%;
     border: solid 1px rgba(199, 207, 185, 0.945);
     font-size: 1rem;
-    margin: 5px 0
+    margin: 5px 0;
+    margin-bottom: 30px;
 }
 
 .login-container input:focus {
