--- a/src/components/header/menuhamburgueza/menuhamburgueza.style.css
+++ b/src/components/header/menuhamburgueza/menuhamburgueza.style.css
@@ -45,8 +45,8 @@
 
 .cardHamburgueza{
     width: 95%;
-    display: none;
-    justify-content: flex-end;
+    position: relative;
+    left: 200px;
     
   
 }
@@ -55,6 +55,30 @@
     width: 5%;
 
 }
+.logocard-habur {
+    background-color: red;
+    width: 22px;
+    height: 22px;
+    border-radius: 50%;
+    position: absolute;
+    top:5px;
+    right: 35px;
+    text-align: center;
+    color: #fff;
+}
+
+.logocard-hambur-menu{
+    background-color: red;
+    width: 22px;
+    height: 22px;
+    border-radius: 50%;
+    position:absolute;
+    bottom: 230px;
+    left: 80px;
+    text-align: center;
+    color: #fff;
+}
+
 
 .main-link-open , .main-link-close {
     list-style: none;
