--- a/src/components/header/menuhamburgueza/menuhamburgueza.style.css
+++ b/src/components/header/menuhamburgueza/menuhamburgueza.style.css
@@ -63,8 +63,10 @@
     position: absolute;
     top:5px;
     right: 35px;
-    text-align: center;
     color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .logocard-hambur-menu{
@@ -72,11 +74,12 @@
     width: 22px;
     height: 22px;
     border-radius: 50%;
-    position:absolute;
-    bottom: 230px;
-    left: 80px;
+    position:relative;
+     top: 5px;
+    left: 45px;
     text-align: center;
     color: #fff;
+   
 }
 
 
@@ -138,7 +141,10 @@ border-radius: 10px;
 .main-link li:nth-child(1n+3) {
     display: flex;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 25px;
     
+  }
+  .main-link li:nth-child(8){
+    display: none;
   }
 
