--- a/src/components/header/menuhamburgueza/menuhamburgueza.style.css
+++ b/src/components/header/menuhamburgueza/menuhamburgueza.style.css
@@ -10,6 +10,7 @@
     flex-flow: column nowrap;
 }
 
+
 .main-menu-hamburgueza span{
     width: 2rem;
     height: 0.25rem;
@@ -43,18 +44,7 @@
 }
 
 
-.cardHamburgueza{
-    width: 95%;
-    position: relative;
-    left: 200px;
-    
-  
-}
 
-.cardHamburgueza img{
-    width: 5%;
-
-}
 .logocard-habur {
     background-color: red;
     width: 22px;
@@ -64,7 +54,7 @@
     top:5px;
     right: 35px;
     color: #fff;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
 }
@@ -79,6 +69,9 @@
     left: 45px;
     text-align: center;
     color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
    
 }
 
